# timeseries-expr

./: .gitignore  CMakeLists.txt  README.md
examples/: toy_backend.cpp
include/tsexpr/: expr.hpp  lexer.hpp  parser.hpp  program.hpp  timeseries_stub.hpp  token.hpp
src/: expr.cpp  lexer.cpp  parser.cpp  program.cpp  timeseries_stub.cpp
tests/: test_expr.cpp
